<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="pizza">Pizza - $12</string>
    <string name="chicken">Specialty Chicken - $15</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
