<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my">
    <TableRow>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pizza"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/minusPizza"
            android:onClick="minus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:id="@+id/PizzaCount"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/addPizza"
            android:onClick="add" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/chicken"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/minusChicken"
            android:onClick="minus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:id="@+id/ChickenCount"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/addChicken"
            android:onClick="add" />
    </TableRow>
    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_message"
        android:hint="@string/edit_message" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>
</TableLayout>
